Move overflow x to html element instead of body

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,14 @@ https://colorhunt.co/palette/192310
   color: #b1bfbf;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   text-align: center;
   color: #204051;
-  overflow-x: hidden;
 }
 
 p {
