--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ h1 {
 
 h2 {
   font-size: 3rem;
-  color: #84a9ac;
+  color: #6da8ad;
 }
 
 h3 {
@@ -149,9 +149,12 @@ hr {
   }
 }
 
+
+
 /* Middle Container */
 #middle-section {
-  background-color: #d8e8e8;
+  /* background-color: #d8e8e8; */
+  background-color: #ffffff;
 }
 
 .profile-img {
@@ -159,16 +162,45 @@ hr {
   margin: 50px;
 }
 
+.skills-title {
+  margin-top: 50px;
+  margin-bottom: -20px;
+}
 
 .skill-img {
-  width: 150px;
+  max-width: 180x;
+  max-height: 180px;
+  margin: auto;
+}
+
+.skill-row {
+  margin: 50px auto;
 }
 
 .skills-header {
-  margin-top: 50px;
-  margin-bottom: 25px;
+  margin: 10px auto;
 }
 
+@media screen and (min-width:993px) {
+  .skill-description-container1 {
+    text-align: left;
+  }
+  .skill-description-container2 {
+    text-align: right;
+  }
+}
+@media screen and (max-width:992px) {
+  .skill-description-container1 {
+    text-align: center;
+  }
+  .skill-description-container2 {
+    text-align: center;
+  }
+}
+
+#contact-btn {
+  max-width: 500px;
+}
 
 /* Button Generator Inserted */
 .BUTTON_AMJ {
@@ -197,15 +229,16 @@ hr {
 .BUTTON_AMJ:hover {
   border: solid #0A6060 0px;
   background: #33C3C3;
-  background-image: -webkit-linear-gradient(top, #33C3C3, #19797E);
-  background-image: -moz-linear-gradient(top, #33C3C3, #19797E);
-  background-image: -ms-linear-gradient(top, #33C3C3, #19797E);
-  background-image: -o-linear-gradient(top, #33C3C3, #19797E);
-  background-image: linear-gradient(to bottom, #33C3C3, #19797E);
+  background-image: -webkit-linear-gradient(top, #33C3C3, #25a5ac);
+  background-image: -moz-linear-gradient(top, #33C3C3, #25a5ac);
+  background-image: -ms-linear-gradient(top, #33C3C3, #25a5ac);
+  background-image: -o-linear-gradient(top, #33C3C3, #25a5ac);
+  background-image: linear-gradient(to bottom, #33C3C3, #25a5ac);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   text-decoration: none;
+  color: black;
 }
 
 /* Bottom Container */
@@ -215,8 +248,7 @@ hr {
 }
 
 .contact-me {
-  width: 60%;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
 }
 
 .footer-link {
@@ -233,18 +265,6 @@ hr {
 .copyright-text {
   color: #EAF6F6;
 }
-
-#pi-text {
-  display: block;
-  margin: auto;
-}
-
-#pi-img {
-  display: block;
-  margin: 25px auto 5px;
-  height: 50px
-}
-
 
 
 /* Scrollbar */
